distribution/knative/patches/enable-sidecar-istio-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: net-istio-controller
  namespace: knative-serving
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
